       Canon PIXMA MP790
       Canon PIXMA MP970

       *1: for compatibility, the original printers are named with
        "old" appended. These old printers will be deprecated in a
        future release.

   6) Support for the following printers was greatly improved, or
      tested:

       Canon PIXMA MP700
       Canon PIXMA MP710
       Canon PIXMA MP730
       Canon PIXMA MP740
       Canon PIXMA MX340
       Canon PIXMA MX350
       Canon PIXMA iP4000
       Canon PIXMA MG5100

    7) The following printer models were either not added, or removed,
       as they cannot currently be supported, even experimentally,
       owing to an as-yet unknown command format or other issues:

       Canon PIXMA i250
       Canon PIXMA i320
       Canon PIXMA i350
       Canon PIXMA iP90
       Canon PIXMA iP90v *1
       Canon PIXMA iP100 *2
       Canon PIXMA iP1000
       Canon PIXMA iP1200
       Canon PIXMA iP1300
       Canon PIXMA iP1500
       Canon PIXMA iP1600
       Canon PIXMA iP1700
       Canon PIXMA iP1800
       Canon PIXMA iP1900
       Canon PIXMA iP2200
       Canon PIXMA iP2500
       Canon PIXMA iP2600
       Canon PIXMA MP5
       Canon PIXMA MP10
       Canon PIXMA MP55
       Canon PIXMA MP110
       Canon PIXMA MP130
       Canon PIXMA PRO-1 *3

       *1: data format partially understood (WIP)
       *2: data format partially understood (WIP)
       *3: protocol is supported but inks used are not yet supported
          (WIP)

* Changes from 5.2.6

  1) New printers supported in this release:

     Note that support for all printers marked "EXPERIMENTAL"
     (untested) or "PRELIMINARY" (minimally tested but untuned) is
     subject to change without notice.  Printers not marked
     "EXPERIMENTAL" generally will not change between releases, but
     notice will be given and if possible back compatibility will be
     provided.

     - Canon inkjet printers:

       Canon PIXMA iP1000 (EXPERIMENTAL)
       Canon PIXMA iP1200 (EXPERIMENTAL)