@@ -364,6 +364,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP710
        Canon PIXMA MP730
        Canon PIXMA MP740
+       Canon PIXMA MP950
+       Canon PIXMA MP960
        Canon PIXMA MX340
        Canon PIXMA MX350
        Canon PIXMA iP4000
